# srihash

./: LICENSE  README.md  srihash.cabal
src/Data/Digest/: SRI.hs
src/Data/Digest/SRI/: Lazy.hs  Lucid.hs
test/: Spec.hs
