name:                srihash
version:             0.1.0.0
synopsis:            Subresource Integrity Hash Generator
description:         Please see README.md
homepage:            http://github.com/nejstastnejsistene/srihash#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Johnson
maintainer:          peter@peterjohnson.io
copyright:           2015 Peter Johnson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Digest.SRI.Lazy
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , SHA
  default-language:    Haskell2010

test-suite srihash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , srihash
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nejstastnejsistene/srihash
